--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ python-dateutil==2.8.1
 pytz==2021.1
 six==1.15.0
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.9.0
+torch>=2.5.0
 -f https://download.pytorch.org/whl/torch_stable.html
-torchvision==0.10.0
+torchvision>=0.18.0
 typing-extensions==3.7.4.3
 Werkzeug==1.0.1
